--- a/dawgpath_pipeline_admin_vue/css/custom.scss
+++ b/dawgpath_pipeline_admin_vue/css/custom.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 // 1. import bootstrap functions first
 @import "node_modules/bootstrap/scss/functions";
 
@@ -155,7 +156,7 @@ $utilities: (
     $alert-color: mix(
       $value,
       color-contrast($alert-background),
-      abs($alert-color-scale)
+      math.abs($alert-color-scale)
     );
   }
   .alert-#{$state} {
